--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"gh-pages": "npm run build && npx gh-pages -d docs"
 	},
 	"devDependencies": {
 		"@jspsych/plugin-audio-keyboard-response": "^1.1.2",
@@ -17,6 +18,7 @@
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
 		"csv": "^6.2.8",
+		"gh-pages": "^5.0.0",
 		"jspsych": "^7.3.2",
 		"muse-js": "^3.3.0",
 		"papaparse": "^5.4.1",
